# Progetto_PCS_2024

./: .gitignore  README.md
Project/: CMakeLists.txt  README.md  main.cpp  main_test.cpp
Project/DFN/: FR10_data.txt  FR200_data.txt  FR362_data.txt  FR3_data.txt  FR50_data.txt  FR82_data.txt  FRtot_data.txt
Project/Documentazione/: geogebra-export 1.ggb  geogebra-export.ggb  plant_uml_documentation OFFICIAL.txt
Project/MaterialeUtileForse/: 1 50.ggb  3 200.ggb  7 200.ggb  Senza titolo.ggb
Project/Report/: idea.txt
Project/src/: CMakeLists.txt  Fratture.hpp  Utils.cpp  Utils.hpp
Project/src_test/: CMakeLists.txt  TestFratture.hpp
